--- a/style.css
+++ b/style.css
@@ -248,6 +248,17 @@ body {
 }
 
 
+.text-container h2{
+    margin: 2px;
+}
+
+
+.lab-content{
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
 
 .menu-2 {
     list-style: none;
@@ -280,9 +291,7 @@ body {
 }
 
 
-.text-container h2{
-    margin: 2px;
-}
+
 
 pre {
         background-color: #f6f8fa !important;/* Màu nền tối chuẩn Atom */
