--- a/style.css
+++ b/style.css
@@ -254,10 +254,19 @@ body {
 
 
 .lab-content{
-    font-size: 20px;
+    font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.lab-content h2{
+    border: solid;
+    background-color: greenyellow;
+}
 
+.lab-content img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+}
 
 
 .menu-2 {
